@@ -65,7 +65,3 @@
 - Document forcomposites.  Consider XS for it.
 
 - Add fordivisors as XS.
-
-- Make divisors() an alias for all_factors().
-
-- Document changes to factor(1)
