@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util qw/factor factor_exp all_factors is_prime/;
+use Math::Prime::Util qw/factor factor_exp all_factors divisor_sum is_prime/;
 
 my $use64 = Math::Prime::Util::prime_get_config->{'maxbits'} > 32;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
@@ -79,11 +79,43 @@ my %all_factors = (
       4 => [1,2,4],
       3 => [1,3],
       2 => [1,2],
-      1 => [],
-      0 => [],
+      1 => [1],
+      0 => [0,1],
 );
 
-plan tests =>  (3 * scalar @testn) + scalar(keys %all_factors) + 10*9 + 8 + 1;
+my %prime_factors = (
+ 456789 => [3,43,3541],
+ 123456 => [2,2,2,2,2,2,3,643],
+ 115553 => [115553],
+  30107 => [7,11,17,23],
+      5 => [5],
+      4 => [2,2],
+      3 => [3],
+      2 => [2],
+      1 => [],
+      0 => [0],
+);
+
+my %factor_exponents = (
+ 456789 => [[3,1],[43,1],[3541,1]],
+ 123456 => [[2,6],[3,1],[643,1]],
+ 115553 => [[115553,1]],
+  30107 => [[7,1],[11,1],[17,1],[23,1]],
+      5 => [[5,1]],
+      4 => [[2,2]],
+      3 => [[3,1]],
+      2 => [[2,1]],
+      1 => [],
+      0 => [[0,1]],
+);
+
+plan tests => (3 * scalar @testn)
+            + 2*scalar(keys %prime_factors)
+            + 4*scalar(keys %all_factors)
+            + 2*scalar(keys %factor_exponents)
+            + 10*9
+            + 8
+            + 1;
 
 foreach my $n (@testn) {
   my @f = factor($n);
@@ -105,10 +137,23 @@ foreach my $n (@testn) {
   is_deeply( [factor_exp($n)], [linear_to_exp(@f)], "   factor_exp looks right" );
 }
 
-while (my($n, $divisors) = each(%all_factors)) {
-  is_deeply( [all_factors($n)], $divisors, "all_factors($n)" );
+while (my($n, $factors) = each(%prime_factors)) {
+  is_deeply( [factor($n)], $factors, "factors($n)" );
+  is( scalar factor($n), scalar @$factors, "scalar factors($n)" );
 }
 
+while (my($n, $divisors) = each(%all_factors)) {
+  is_deeply( [all_factors($n)], $divisors, "all_factors($n)" );
+  is( scalar all_factors($n), scalar @$divisors, "scalar all_factors($n)" );
+  is( divisor_sum($n,0), scalar @$divisors, "divisor_sum($n,0)" );
+  my $sum = 0;  foreach my $f (@$divisors) { $sum += $f; }
+  is( divisor_sum($n), $sum, "divisor_sum($n)" );
+}
+
+while (my($n, $factors) = each(%factor_exponents)) {
+  is_deeply( [factor_exp($n)], $factors, "factor_exp($n)" );
+  is( scalar factor_exp($n), scalar @$factors, "scalar factor_exp($n)" );
+}
 
 extra_factor_test("trial_factor",  sub {Math::Prime::Util::trial_factor(shift)});
 extra_factor_test("fermat_factor", sub {Math::Prime::Util::fermat_factor(shift)});
