@@ -29,7 +29,7 @@ my @primes = qw/
 /;
 
 my @composites = qw/
-0 1 4 6 8 9 10 12 14 15 16 18 20 21 22
+0 4 6 8 9 10 12 14 15 16 18 20 21 22
 9 2047 1373653 25326001 3215031751
 561 1105 1729 2465 2821 6601 8911 10585 15841 29341 41041 46657 52633
 62745 63973 75361 101101 340561 488881 852841 1857241 6733693
